--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,18 @@ services:
       - ./src:/src
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
-            
+    environment: 
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=supersecretpassword
+    depends_on: 
+      - db
+  
+  db:
+    image: postgres:10-alpine
+    environment: 
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgress
+      - POSTGRES_PASSWORD=supersecretpassword
 
