--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     volumes: 
       - ./src:/src
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment: 
       - DB_HOST=db
       - DB_NAME=app
@@ -22,6 +24,8 @@ services:
     image: postgres:10-alpine
     environment: 
       - POSTGRES_DB=app
-      - POSTGRES_USER=postgress
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=supersecretpassword
+    ports: 
+      - 5432:5432
 
